If 'Operator' panel in Tool shelf is dragged out of view, then 'save startup file', it will be gone. #34974

Closed
opened 2013-04-14 03:03:44 +02:00 by Joel Godin · 13 comments

%%%--- Operating System, Graphics card ---
iMac 2012 10.7.5 , AMD Radeon HD 6770M 512 MB

- Blender version with error, and version that worked ---

Bug started at 2.66 until most recent 2.66.5 r55895 when "Save Startup File" was added.

- Short description of error ---

The 'Operator' panel in the Tool shelf, can be dragged down out of sight, and if you then 'Save Startup File', ever
file from then on, it will be too low to grab it with the mouse. It is out of sight.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See above and/or this video:
http://youtu.be/xpHCA7VlTKk%%%

%%%--- Operating System, Graphics card --- iMac 2012 10.7.5 , AMD Radeon HD 6770M 512 MB - Blender version with error, and version that worked --- Bug started at 2.66 until most recent 2.66.5 r55895 when "Save Startup File" was added. - Short description of error --- The 'Operator' panel in the Tool shelf, can be dragged down out of sight, and if you then 'Save Startup File', ever file from then on, it will be too low to grab it with the mouse. It is out of sight. - Steps for others to reproduce the error (preferably based on attached .blend file) --- See above and/or this video: http://youtu.be/xpHCA7VlTKk%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%For whatever reason, the tab to reopen the operator panel when it is closed doesn't show for you.

Observe the Tab which appears in order to retrieve this panel in the event it is closed http://www.pasteall.org/pic/49275

Suggest you confirm this behaviour with the default theme by loading factory settings or so?%%%

%%%For whatever reason, the tab to reopen the operator panel when it is closed doesn't show for you. Observe the Tab which appears in order to retrieve this panel in the event it is closed http://www.pasteall.org/pic/49275 Suggest you confirm this behaviour with the default theme by loading factory settings or so?%%%
Author

%%%Yes, you are right. Must be a theme setting that makes it blend in.
Sorry about that. %%%

%%%Yes, you are right. Must be a theme setting that makes it blend in. Sorry about that. %%%

%%%This thing is not themeable it seems.

Joel, could you please attach your startup.blend file?%%%

%%%This thing is not themeable it seems. Joel, could you please attach your startup.blend file?%%%
Author

%%%Sure, here it is.%%%

%%%Sure, here it is.%%%

%%%Ah, widget is there, it's just not visible at all. Usability improvement, simple for Ton :)%%%

%%%Ah, widget is there, it's just not visible at all. Usability improvement, simple for Ton :)%%%
Member

%%%testing if mails work...%%%

%%%testing if mails work...%%%
Member

%%%another test if mails now arrive...%%%

%%%another test if mails now arrive...%%%

%%%Hopefully this mail will arrive nice.

Joel, pardon for noise, but we've got some major notification issues which we're solving right now.%%%

%%%Hopefully this mail will arrive nice. Joel, pardon for noise, but we've got some major notification issues which we're solving right now.%%%
Member

%%%It was missing proper use for alpha, it was meant to darken and brighten. Now it shows on all themes fine.%%%

%%%It was missing proper use for alpha, it was meant to darken and brighten. Now it shows on all themes fine.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%For whatever reason, the tab to reopen the operator panel when it is closed doesn't show for you, and I still can't find it !. Help Please
I have tryed to load factory settings. I have gone as far as to reboot my PC to factory settings { thank god for flash drives} and downloaded the Blender program form the web site,installed it. an still no Tool Shelf. And I have looked and clicked along the areas of the tab or where it should be.%%%

%%%For whatever reason, the tab to reopen the operator panel when it is closed doesn't show for you, and I still can't find it !. Help Please I have tryed to load factory settings. I have gone as far as to reboot my PC to factory settings { thank god for flash drives} and downloaded the Blender program form the web site,installed it. an still no Tool Shelf. And I have looked and clicked along the areas of the tab or where it should be.%%%
Member

%%%If you load factory settings via Blender's file menu, the left toolbar region for a 3d viewport has the Operator panel open and visible.

Drag it all the way down, and you can see a little tab with - [x] appear. Use 2.67 binary release from blender.org%%%

%%%If you load factory settings via Blender's file menu, the left toolbar region for a 3d viewport has the Operator panel open and visible. Drag it all the way down, and you can see a little tab with - [x] appear. Use 2.67 binary release from blender.org%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34974
No description provided.