Bug fix #34974

The open region indicator (with +) didn't do alpha blending properly, so it wasn't
visible for any theme color.